Fixed Gap between Landing and About

--- a/src/sections/About/About.css
+++ b/src/sections/About/About.css
@@ -1,6 +1,7 @@
 /* @import url('http://fonts.cdnfonts.com/css/rany'); */
 
 .about {
+    margin-top: -2rem;
     width: 100vw;
     height: 100%;
     min-height: 100vh;
